First dataset support

--- a/Web.config
+++ b/Web.config
@@ -1,8 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
 	<connectionStrings>
-		<add name="crociereConnectionString" connectionString="server=127.0.0.1;Port=3307;User Id=maxtoni;password=Briciola06;database=crociere" providerName="MySql.Data.MySqlClient"/>
-	</connectionStrings>
+  <add name="crociereConnectionString" connectionString="server=127.0.0.1;Port=3307;User Id=maxtoni;password=Briciola06;database=crociere"
+   providerName="MySql.Data.MySqlClient" />
+  <add name="voliConnectionString" connectionString="port=3307;server=127.0.0.1;User Id=root;password=root;Persist Security Info=True;database=voli"
+   providerName="MySql.Data.MySqlClient" />
+ </connectionStrings>
 	<system.web>
 		<compilation debug="true" strict="false" explicit="true">
 			<assemblies>
